# micro-tls

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: error.rs  lib.rs  msgs.rs
client/src/msgs/: array.rs  enums.rs  extension.rs  handshake.rs  macros.rs  primitive.rs  random.rs  session.rs  slice.rs
client/src/msgs/array/: item.rs  iter.rs  macros.rs
client/src/msgs/enums/: macros.rs
client/src/msgs/extension/: client.rs  macros.rs  server.rs
client/src/msgs/handshake/: client.rs  server.rs
client/tests/: client.rs  keytype.rs  lib.rs  server.rs  suite.rs
message/: Cargo.toml
message/src/: array.rs  codec.rs  enums.rs  error.rs  extension.rs  handshake.rs  lib.rs  primitive.rs  random.rs  session.rs
message/src/array/: item.rs  iter.rs  macros.rs
message/src/codec/: array.rs  decoder.rs  encoder.rs  header.rs  num.rs
message/src/codec/array/: iter.rs  macros.rs
message/src/enums/: macros.rs
message/src/extension/: client.rs  macros.rs  server.rs
message/src/handshake/: client.rs  extension.rs  random.rs  server.rs  session.rs
message/src/handshake/enums/: macros.rs
message/src/handshake/extension/: client.rs  macros.rs  server.rs
