[package]
name = "tls13-embed-client"
version = "0.1.0"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

[dependencies]
libc = { version = "0.2.53", default-features = false }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"

[dev-dependencies]
webpki = "0.19.1"
rustls = "0.15.2"
